<resources>
    <string name="app_name">ElorMov</string>
    //texts
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="recuperarPasswordPregunta">¿Quieres recuperar la contraseña?</string>
    <string name="recuperarPassword">Recuperar contraseña</string>
    <string name="enviarNuevoPassword">Clave nueva enviada a tu email</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="perfilProfesor">PERFIL PROFESOR</string>
    <string name="perfilAlumnno">PERFIL ALUMNO</string>
    <string name="perfil">PERFIL</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">X</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="hora">Hora</string>
    <string name="alumnos">ALUMNOS</string>
    <string name="profesores">PROFESORES</string>


    //datos
    <string name="profesor">PROFESOR</string>
    <string name="alumno">ALUMNO</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="ciclo">Ciclo</string>
    <string name="curso">Curso</string>
    <string name="fechaMatricula">Fecha matrícula</string>
    <string name="horarioDeProfesor">Profesor:</string>

    //datosReunion
    <string name="titulo">Titulo:</string>
    <string name="tema2">Tema:</string>
    <string name="dia">Dia:</string>
    <string name="hora2">Hora:</string>
    <string name="aula">Aula:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="profesor2">Profesor:</string>
    <string name="estudiante2">Estudiante:</string>
    <string name="crearReunion">CREAR REUNIÓN</string>


    //inputs
    <string name="introducir_usuario">Introducir Usuario</string>
    <string name="introducir_password">Introducir Contraseña</string>

    //botones
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_recuperar_password"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="boton_recuperar"><u>Recuperar</u></string>
    <string name="boton_iniciar_sesion">Iniciar Sesión</string>
    <string name="boton_salir">Salir</string>
    <string name="boton_volver">Volver</string>
    <string name="boton_consultarEstandar">Consultar</string>
    <string name="boton_consultarHorarioProfesor">Consultar horario del Profesor</string>
    <string name="boton_consultarAlumnos">Consultar alumnos</string>
    <string name="boton_consultarReuniones">Consultar reuniones</string>
    <string name="boton_crear">Crear</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="annadir_imagen">Añadir imagen</string>

</resources>