<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReunionesActivity">

    <TextView
        android:id="@+id/tvTituloReuniones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Reuniones"
        android:textColor="#008aab"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollReuniones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/tvTituloReuniones"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableLayout
            android:id="@+id/tableReuniones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:padding="8dp">

            <TableRow>
                <TextView style="@style/HorarioCellHeader" android:text="@string/hora"/>
                <TextView style="@style/HorarioCellHeader" android:text="@string/lunes"/>
                <TextView style="@style/HorarioCellHeader" android:text="@string/martes"/>
                <TextView style="@style/HorarioCellHeader" android:text="@string/miercoles"/>
                <TextView style="@style/HorarioCellHeader" android:text="@string/jueves"/>
                <TextView style="@style/HorarioCellHeader" android:text="@string/viernes"/>
            </TableRow>

        </TableLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/buttonCrearReunion"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:backgroundTint="#008aab"
        android:text="@string/boton_crear"
        app:layout_constraintEnd_toStartOf="@+id/buttonVolverReuniones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonVolverReuniones"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:backgroundTint="#008aab"
        android:text="@string/boton_volver"
        app:layout_constraintStart_toEndOf="@+id/buttonCrearReunion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="615dp" />

    <include layout="@layout/include_sin_conexion" />

</androidx.constraintlayout.widget.ConstraintLayout>
