<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipalActivity">

    <ImageButton
        android:id="@+id/btnPerfil"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Perfil"
        android:src="@drawable/icono_pefil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNombreUsuarioPP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="NombreUsuario"
        android:textColor="#008aab"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPerfil"
        app:layout_constraintEnd_toStartOf="@+id/btnPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPerfil" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewPaginaPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPerfil" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" /> <Button
    android:id="@+id/buttonConsultarPP"
    android:layout_width="316dp"
    android:layout_height="wrap_content"
    android:backgroundTint="#211261"
    android:text="@string/boton_consultarEstandar"
    app:layout_constraintBottom_toTopOf="@+id/buttonConsultarReunionesPP"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/guideline"
    app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonConsultarReunionesPP"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#211261"
        android:text="@string/boton_consultarReuniones"
        app:layout_constraintBottom_toTopOf="@+id/buttonSalirPP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConsultarPP" />

    <Button
        android:id="@+id/buttonSalirPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#008aab"
        android:text="@string/boton_salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConsultarReunionesPP" />

</androidx.constraintlayout.widget.ConstraintLayout>